@@ -1,5 +1,11 @@
 2024-12-11 Philipp Klaus Krause <philipp@colecovision.eu>
 
+	* src/f8/gen.c,
+	  src/f8/peeph.def:
+	  Improve code for f8 bit-field access.
+
+2024-12-11 Philipp Klaus Krause <philipp@colecovision.eu>
+
 	* src/f8/main.c,
 	  src/f8/gen.c:
 	  Improve f8 codegen for rotations.
